--- a/index.html
+++ b/index.html
@@ -18,16 +18,19 @@
 <header class="grid">
     <p id="title">My Portfolio</p>
     <p id="name">Olivia Gie</p>
+    <p id="contact">Email:olivia.gie@outlook.com</p>
 </header>
 
-<main class="grid">
+<main>
+
+<div class="grid" id="sectionIntro">
 
 <div id="Together">
-<div id="bio" class="bio">
-    <h3>About Me: </h3>
-    <p>I have previously worked in different sectors: sales, banking, health care. I have always enjoed working with other people and problem solving, however I always found myself drawn to the software used by the companies. I would learn it throughout and become a go-to person for advice and training. I would have many ideas how to improve it's functionality and make it more user-friendly. That's why I finally decided to strart a creer in software development. i have just completed Level 3 Bootcamp which allowed me to gain good fundamental knowledge of coding. I discovered that coding enables me to combine my creative and problem-solving side I am planning to continue expanding my skills working on new projects. </p>
-</div>
-<img id="mypic" src="Shoulder stand pic.jpg" alt="">
+    <div id="bio" class="bio">
+        <h3>About Me: </h3>
+        <p>I have previously worked in different sectors: sales, banking, health care. I have always enjoed working with other people and problem solving, however I always found myself drawn to the software used by the companies. I would learn it throughout and become a go-to person for advice and training. I would have many ideas how to improve it's functionality and make it more user-friendly. That's why I finally decided to strart a creer in software development. i have just completed Level 3 Bootcamp which allowed me to gain good fundamental knowledge of coding. I discovered that coding enables me to combine my creative and problem-solving side I am planning to continue expanding my skills working on new projects. </p>
+    </div>
+    <img id="mypic" src="Shoulder stand pic.jpg" alt="">
 </div>
 
 <div id="myPassions">
@@ -42,8 +45,12 @@
         <li>Puzzles</li>
     </ul>
 </div>
+</div>
+
+<div class="grid" id="sectionSkills">
 
 <h2 id="technicalSkills">Technical Skills</h2>
+
 <div id="skillsDiv">
     <img alt="python" class="skills" width="48" height="48" src="https://img.icons8.com/color/48/python--v1.png" alt="python--v1"/>
     <img class="skills" width="48" height="48" src="https://img.icons8.com/color/48/javascript--v1.png" alt="javascript--v1"/>
@@ -57,43 +64,50 @@
     <img src="wix.256x256.png" class="skills" width="48" height="48">
     <img src="sql.256x256.png"class="skills" width="48" height="48">
 </div>
+</div>
 
+<div class="grid" id="sectionProjects">
 <h2>My Projects</h2>
-<div class="project">
+
+<div class="grid" id="project">
     <img class="screenshot" src="Moodybear.png" alt="bear">
     <div class="card">
         <h3>Moodybear</h3>
-        <p>Inspiration: Many of us suffer from anxiety these days. It's imortant to stop when we are feeling anxious and ask ourselves how we feel.</p>
-        <p>What I learned: Expanded CSS knowledge functions and arrays</p>
-        <p>Tools used: Javascript, HTML, CSS</p>
+        <p>Inspiration: Many of us suffer from anxiety these days. When we feel anxious it's a good idea to stop for a moment and ask ourselves how we feel.</p>
+        <p>What I have learned: Expanded CSS knowledge functions and arrays</p>
+        <p class="tu">Tools used: Javascript, HTML, CSS</p>
     </div>
 </div>
-<div class="project">
+
+<div class="grid" id="project">
     <img class="screenshot" src="Calendar with Quotes.png" alt="calendar">
 <div class="card">
         <h3>Calendar</h3>
-        <p>Inspiration:This is based on the olfashioned paper calenar people use to have on their desks. This one you can have on your desktop. It's eco-friednly. It displays current date and time and also a quote for the day to give you something to think about</p>
-        <p>What I learned: how to use API and JS built in functions, expanded CSS knowledge functions and arrays</p>
-        <p>Tools used: Javascript, HTML, CSS, API</p>
+        <p>Inspiration: This idea is based on the old-fashioned paper calenar, people use to have on their desks. This one you can have on your desktop. It's eco-friednly. It displays current date and time and also a quote for the day to give you something to think about</p>
+        <p>What I have learned: how to use API and JavaSript built in functions, expanded CSS knowledge of functions and arrays</p>
+        <p class="tu">Tools used: Javascript, HTML, CSS, API</p>
     </div>
 </div>
-<div class="project">
-    <img class="screenshot" src="E-Commerce Daabase.png" alt="database">
+
+<div class="grid" id="project">
+    <img class="screenshot" id="ecom" src="Screenshot 2025-01-23 132205.png" alt="database">
 <div class="card">
         <h3>E-Commerce Database</h3>
-        <p>Database for a fruit&veggy shop. It contains tables linked through primary and foreign key. README document contains commands to access particular information within the database to help with re-stocking and marketing planning</p>
-        <p>What I learned: how to create and use SQL database</p>
-        <p>Tools used: MySQL</p>
+        <p>This is a Database for a fruit&veggy shop. It contains tables linked through primary and foreign keys. README document contains commands to access particular information within the database to help with re-stocking and marketing planning</p>
+        <p>What I have learned: how to create and use SQL database</p>
+        <p class="tu">Tools used: MySQL</p>
     </div>
 </div>
-<div class="project">
-    <img class="screenshot" src="Weather app.png" alt="weather">
+
+<div class="grid" id="project">
+    <img class="screenshot" id="ecom" src="Weather app pic.png" alt="weather">
 <div class="card">
         <h3>Weather App</h3>
-        <p>This is fun app that displays not only weather forecast butl also gives recommendations depending on the temperature, ie "wear you gloves" It stores information about each city in an array and displays it based on the user's input.</p>
-        <p>What I learned: Fundamentals of Python Language, functions loops and arrays</p>
-        <p>Tools used: Python</p>
+        <p>This is fun app that displays not only weather forecast but also gives recommendations depending on the temperature, i.e. "wear you gloves". It stores information about each city in an array and displays it based on the user's input.</p>
+        <p>What I have learned: Fundamentals of Python Language, functions, loops and arrays</p>
+        <p class="tu">Tools used: Python</p>
     </div>
+</div>
 </div>
 
 
