--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <p>Inspiration: Many of us suffer from anxiety these days. When we feel anxious it's a good idea to stop for a moment and ask ourselves how we feel.</p>
         <p>What I have learned: Expanded CSS knowledge functions and arrays</p>
         <p class="tu">Tools used: Javascript, HTML, CSS</p>
+        <a href="http:olivia-it.github.io/Moodybear/" target="_blank" rel="noopener noreferrer">GitHub:http:olivia-it.github.io/Moodybear/</a>
     </div>
 </div>
 
@@ -84,6 +85,7 @@
         <p>Inspiration: This idea is based on the old-fashioned paper calenar, people use to have on their desks. This one you can have on your desktop. It's eco-friednly. It displays current date and time and also a quote for the day to give you something to think about</p>
         <p>What I have learned: how to use API and JavaSript built in functions, expanded CSS knowledge of functions and arrays</p>
         <p class="tu">Tools used: Javascript, HTML, CSS, API</p>
+        <a href="http://olivia-it.github.io/Desk-Calendar/" target="_blank" rel="noopener noreferrer">GitHub:olivia-it.github.io/Desk-Calendar/</a>
     </div>
 </div>
 
@@ -94,6 +96,7 @@
         <p>This is a Database for a fruit&veggy shop. It contains tables linked through primary and foreign keys. README document contains commands to access particular information within the database to help with re-stocking and marketing planning</p>
         <p>What I have learned: how to create and use SQL database</p>
         <p class="tu">Tools used: MySQL</p>
+        <a href="http://github.com/Olivia-it/E-Commerce-Database" target="_blank" rel="noopener noreferrer">GitHub:github.com/Olivia-it/E-Commerce-Database</a>
     </div>
 </div>
 
@@ -104,6 +107,7 @@
         <p>This is fun app that displays not only weather forecast but also gives recommendations depending on the temperature, i.e. "wear you gloves". It stores information about each city in an array and displays it based on the user's input.</p>
         <p>What I have learned: Fundamentals of Python Language, functions, loops and arrays</p>
         <p class="tu">Tools used: Python</p>
+        <a href="http://github.com/Olivia-it/Python-Weather-App" target="_blank" rel="noopener noreferrer">GitHub:github.com/Olivia-it/Python-Weather-App</a>
     </div>
 </div>
 </div>
