--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <img class="screenshot" src="Moodybear.png" alt="bear">
     <div class="card">
         <h3>Moodybear</h3>
-        <p>Inspiration: Many of us suffer from anxiety these days. When we feel anxious it's a good idea to stop for a moment and ask ourselves how we feel.</p>
-        <p>What I have learned: Expanded CSS knowledge functions and arrays</p>
+        <p class="description">Inspiration: Many of us suffer from anxiety these days. When we feel anxious it's a good idea to stop for a moment and ask ourselves how we feel.</p>
+        <p class="description">What I have learned: Expanded CSS knowledge functions and arrays</p>
         <p class="tu">Tools used: Javascript, HTML, CSS</p>
         <a href="http:olivia-it.github.io/Moodybear/" target="_blank" rel="noopener noreferrer">GitHub:http:olivia-it.github.io/Moodybear/</a>
     </div>
@@ -94,8 +94,8 @@
     <img class="screenshot" src="Calendar with Quotes.png" alt="calendar">
 <div class="card">
         <h3>Calendar</h3>
-        <p>Inspiration: This idea is based on the old-fashioned paper calenar, people use to have on their desks. This one you can have on your desktop. It's eco-friednly. It displays current date and time and also a quote for the day to give you something to think about</p>
-        <p>What I have learned: how to use API and JavaSript built in functions, expanded CSS knowledge of functions and arrays</p>
+        <p class="description">Inspiration: This idea is based on the old-fashioned paper calenar, people use to have on their desks. This one you can have on your desktop. It's eco-friednly. It displays current date and time and also a quote for the day to give you something to think about</p>
+        <p class="description">What I have learned: how to use API and JavaSript built in functions, expanded CSS knowledge of functions and arrays</p>
         <p class="tu">Tools used: Javascript, HTML, CSS, API</p>
         <a href="http://olivia-it.github.io/Desk-Calendar/" target="_blank" rel="noopener noreferrer">GitHub:olivia-it.github.io/Desk-Calendar/</a>
     </div>
@@ -105,8 +105,8 @@
     <img class="screenshot" id="ecom" src="Screenshot 2025-01-23 132205.png" alt="database">
 <div class="card">
         <h3>E-Commerce Database</h3>
-        <p>This is a Database for a fruit&veggy shop. It contains tables linked through primary and foreign keys. README document contains commands to access particular information within the database to help with re-stocking and marketing planning</p>
-        <p>What I have learned: how to create and use SQL database</p>
+        <p class="description">This is a Database for a fruit&veggy shop. It contains tables linked through primary and foreign keys. README document contains commands to access particular information within the database to help with re-stocking and marketing planning</p>
+        <p class="description">What I have learned: how to create and use SQL database</p>
         <p class="tu">Tools used: MySQL</p>
         <a href="http://github.com/Olivia-it/E-Commerce-Database" target="_blank" rel="noopener noreferrer">GitHub:github.com/Olivia-it/E-Commerce-Database</a>
     </div>
@@ -116,7 +116,7 @@
     <img class="screenshot" src="Asset Database.png" alt="">
     <div class="card">
         <h3>Asset Database</h3>
-        <p>I have always been fascinated with databases and how an application can perform searches to provide the best user experience. Working with many different softwares, I have developed ideas on how the best search engine would work. This is a work-in-progress version (not quite finished) of a project I always wanted to create. It can be used for various databases. I organise community theatre projects that involve children, adults, musicians and supporters. Having a database search app will allow me to sort through data effectivly to schedule seperate rehearsals, check people's availability and effectivly plan every step of the project. This project has been quite difficult for me to put together as it requires consolidating different areas of my knowledge and a lot of research on Javascript. However, it has been an exciting and challanging journey.</p>
+        <p class="description">I have always been fascinated with databases and how an application can perform searches to provide the best user experience. Working with many different softwares, I have developed ideas on how the best search engine would work. This is a work-in-progress version (not quite finished) of a project I always wanted to create. It can be used for various databases. I organise community theatre projects that involve children, adults, musicians and supporters. Having a database search app will allow me to sort through data effectivly to schedule seperate rehearsals, check people's availability and effectivly plan every step of the project. This project has been quite difficult for me to put together as it requires consolidating different areas of my knowledge and a lot of research on Javascript. However, it has been an exciting and challanging journey.</p>
         <p class="tu">Tools used: Javascript, HTML, CSS, SQL</p>
         <a href="https://olivia-it.github.io/SQL-JS-HTML-Database/" target="_blank" rel="noopener noreferrer">GitHub:https://olivia-it.github.io/SQL-JS-HTML-Database/</a>
     </div>
@@ -126,7 +126,7 @@
     <img class="screenshot" src="Falling balls (2).png" alt="">
     <div class="card">
         <h3>Draw Falling Balls Animation</h3>
-        <p> The idea for this project came to me when researching relaxing videos. As a neurodivergent person, I understand the need for sensory relaxation. Drowing balls that keep on falling down brings a sense of piece and takes one's mind of other things for a while. I enjoy using it myself and I am planning to make it into an app in the future for other people to enjoy. Working on this project I learnt basic of animation.
+        <p class="description"> The idea for this project came to me when researching relaxing videos. As a neurodivergent person, I understand the need for sensory relaxation. Drowing balls that keep on falling down brings a sense of piece and takes one's mind of other things for a while. I enjoy using it myself and I am planning to make it into an app in the future for other people to enjoy. Working on this project I learnt basic of animation.
         </p>
         <p class="tu">Tools used: Javascript, HTML, CSS</p>
         <a href=" https://olivia-it.github.io/Animation-Draw-Falling-Balls/" target="_blank" rel="noopener noreferrer">GitHub: https://olivia-it.github.io/Animation-Draw-Falling-Balls/</a>
@@ -137,8 +137,8 @@
     <img class="screenshot" id="ecom" src="Weather app pic.png" alt="weather">
 <div class="card">
         <h3>Weather App</h3>
-        <p>This is fun app that displays not only weather forecast but also gives recommendations depending on the temperature, i.e. "wear you gloves". It stores information about each city in an array and displays it based on the user's input.</p>
-        <p>What I have learned: Fundamentals of Python Language, functions, loops and arrays</p>
+        <p class="description">This is fun app that displays not only weather forecast but also gives recommendations depending on the temperature, i.e. "wear you gloves". It stores information about each city in an array and displays it based on the user's input.</p>
+        <p class="description">What I have learned: Fundamentals of Python Language, functions, loops and arrays</p>
         <p class="tu">Tools used: Python</p>
         <a href="http://github.com/Olivia-it/Python-Weather-App" target="_blank" rel="noopener noreferrer">GitHub:github.com/Olivia-it/Python-Weather-App</a>
     </div>
